<resources>
    <string name="app_name">爱即爱家</string>
    <string name="title_activity_xiugai">XiugaiActivity</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="title_activity_apk">APKActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="entryTitle">接入方式选择</string>
    <string name="apk">apk接入</string>
    <string name="jar">银联sdk接入</string>
    <string name="payBYAPK">APK接入</string>
    <string name="payBYJAR">JAR接入</string>
    <string name="shop">加入\n购物车</string>
    <string name="fell">导购\n体验</string>
    <string name="buy">立即\n购买</string>
    <string name="xiajia">已\n下架</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aijia">爱即爱家</string>
    <string name="allorder">全部订单</string>
    <string name="productnull">该商品订单为空的</string>
    <string name="goshop">去逛逛</string>
    <string name="ordernumber">订单编号</string>
    <string name="waitpay">代付款</string>
    <string name="nowprice">现价</string>
    <string name="previousprice">原价</string>
    <string name="productinformation">商品信息</string>
    <string name="cancleorder">取消订单</string>
    <string name="paymoney">付款</string>
    <string name="alldisplayroom">所有展厅</string>
    <string name="evaluate">评价</string>
    <string name="shopguidelist">导购商品列表</string>
    <string name="ordernum">订单编号</string>
    <string name="status">状态</string>
    <string name="title">标题</string>
    <string name="postevaluate">请在此处提交评价</string>
    <string name="postmessage">提交评价</string>
    <string name="numbers">2000用户推荐</string>
    <string name="hansi">汉斯格雅</string>
    <string name="taocan">-价格套餐-</string>
    <string name="pictureneed">(点击图片获取案例详情)</string>
    <string name="miszhang">张师傅</string>
    <string name="patient">耐心</string>
    <string name="professional">专业</string>
    <string name="workseniority">从业年限</string>
    <string name="installproject">c安装项目</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="nickname">昵称</string>
    <string name="save">保存</string>
    <string name="detail">昵称不能超过10个汉字或20个英文字符，支持中英文、数字、下划线</string>
    <string name="city">南京市</string>
    <string name="wuxicity">无锡市</string>
    <string name="wuhancity">武汉市</string>
    <string name="qingdaocity">青岛市</string>
    <string name="jinancity">济南市</string>
    <string name="othercity">其它城市</string>
    <string name="kefu">客服中心</string>
    <string name="orderdetail">订单详情</string>
    <string name="dingdannumber">订单编号:</string>
    <string name="arriveshop">您预约到店时间：</string>
    <string name="appointshop">您预约的门店:</string>
    <string name="appointproduct">您预约的产品:</string>
    <string name="sureorder">确认订单</string>
    <string name="total">合计:</string>
    <string name="nowpay">立即支付</string>
    <string name="guize">代金券的使用规则</string>
    <string name="myyouhui">我的优惠券</string>
    <string name="noyouhui">你现在还没有优惠券</string>
    <string name="evaluatedetail">评价详情</string>
    <string name="evaluatenum">条目</string>
    <string name="selectstyle">选择风格</string>
    <string name="nowifi">您的手机网络已经飞出了地球！</string>
    <string name="warmhome">限时抢购</string>
    <string name="shopkeeper">猜你喜欢|焕新家</string>
    <string name="recommendproduct">家装换季|满额减</string>
    <string name="shopcar">购物车</string>
    <string name="bianji">编辑</string>
    <string name="allselect">全选</string>
    <string name="allheji">合计:¥</string>
    <string name="shopfeel">导购体验</string>
    <string name="jiesuan">结算0</string>
    <string name="xiajiaproduct">已下架</string>
    <string name="jianjie">简介</string>
    <string name="appointsuccess">预约成功</string>
    <string name="appointproduct1">预约产品：</string>
    <string name="allnumber">共几件</string>
    <string name="appointtime">时间</string>
    <string name="appointzhanting">预约展厅</string>
    <string name="shortdistance">离你最近的展厅:</string>
    <string name="allseezhangting">(浏览所有展厅)</string>
    <string name="wenben">金陵国际家居</string>
    <string name="interestproduct">您感兴趣的产品：</string>
    <string name="huasa">花洒</string>
    <string name="fengge">风格:</string>
    <string name="xiandai">现代</string>
    <string name="nextstep">下一步</string>
    <string name="selectleixing">选择类型</string>
    <string name="startmaster">明星师傅</string>
    <string name="installaudio">安装大讲堂</string>
    <string name="jibeninformation">基本信息</string>
    <string name="yourinformation">您的基本信息:</string>
    <string name="jifenzhuanqu">积分专区</string>
    <string name="yourhavejifen">您拥有的积分</string>
    <string name="lookjifen">查看积分说明</string>
    <string name="jianyue">风格选择|现代简约</string>
    <string name="jieshao">[超高性价比套装]汉斯格雅淋浴套装唯宝马桶卡德维浴缸</string>
    <string name="memberlogin">会员登陆</string>
    <string name="shoujinumber">手机号</string>
    <string name="loginmima">登陆密码</string>
    <string name="login">登录</string>
    <string name="suduzhuce">快速注册</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="shouye">首页</string>
    <string name="fenlei">分类</string>
    <string name="daogou">导购</string>
    <string name="wode">我的</string>
    <string name="shoujiyanzheng">验证码</string>
    <string name="huoquyanzheng">获取验证码</string>
    <string name="chongfumima">重置密码(6-12位的数字或字母组成)</string>
    <string name="xinzengaddress">新增收货地址</string>
    <string name="name">姓名</string>
    <string name="zhenshiname">请填写真实姓名</string>
    <string name="phone">手机</string>
    <string name="userfulnumber">请填写有效号码</string>
    <string name="detailaddress">详细地址</string>
    <string name="tianxiedetailaddress">填写详细的收货地址</string>
    <string name="youbian">邮编</string>
    <string name="tianxieyoubain">请填写准确邮编</string>
    <string name="moren">设置为默认</string>
    <string name="zonghe">综合</string>
    <string name="xiaoliang">销量</string>
    <string name="price">价格</string>
    <string name="zonghepailie">综合排列</string>
    <string name="personinformation">个人资料</string>
    <string name="yonghu">用户名称</string>
    <string name="male">性别</string>
    <string name="information">信息</string>
    <string name="fapiao">发票抬头</string>
    <string name="person">默认个人</string>
    <string name="beizhu">备注说明</string>
    <string name="zhifubao">支付宝</string>
    <string name="recommendzhifubao">推荐有支付宝的新用户</string>
    <string name="yinglian">银联支付</string>
    <string name="yinglianpay">银联快捷支付</string>
    <string name="allsale">商品总价</string>
    <string name="cuxiaoyouhui">促销优惠券</string>
    <string name="qingxuanze">请选择</string>
    <string name="jifen">积分</string>
    <string name="yunfei">运费:</string>
    <string name="shifupay">实付金额:</string>
    <string name="goplace">去这里</string>
    <string name="informationcenter">消息中心</string>
    <string name="lookwuliu">查看物流</string>
    <string name="nowuliustatus">您没有物流状态</string>
    <string name="wuliuzhuizong">快递公司:顺丰快递</string>
    <string name="shezhi">设置</string>
    <string name="gerenziliao">个人资料</string>
    <string name="shouhuoaddress">收货地址</string>
    <string name="loginpassword">修改密码</string>
    <string name="shoucang">我的收藏</string>
    <string name="clearsave">清除缓存</string>
    <string name="guanyu">关于我们</string>
    <string name="tuichulogin">退出登录</string>
    <string name="finish">完成</string>
    <string name="xinzeng">新增</string>
    <string name="daogoufeel">导购体验</string>
    <string name="addshopcar">加入购物车</string>
    <string name="nowgoumai">立即购买</string>
    <string name="zixunfankui">咨询反馈</string>
    <string name="postwenben">提交</string>
    <string name="suggest">在此提交您的建议</string>
    <string name="qiehuan">切换</string>
    <string name="sugestionappoint">请提交预约，您的专属客服会在24小时内与您联系!</string>
    <string name="wantmai">您想要购买的产品：</string>
    <string name="loginzhuce">登录/注册</string>
    <string name="lookallorder">查看所有订单</string>
    <string name="waitshouhuo">待收货</string>
    <string name="tuihuanhuo">退换货(七天无理由)</string>
    <string name="noshoucang">您还没有任何的收藏</string>
    <string name="guizeshuoming">优惠券说明</string>
    <string name="suredingdan">确认订单</string>
    <string name="quickzhuce">快速注册</string>
    <string name="phonenumber">手机号</string>
    <string name="yanzhengma">验证码</string>
    <string name="selectzhanting">选择展厅</string>
    <string name="kongshopcar">购物车还是空的</string>
    <string name="siugaimima">修改登录密码</string>
    <string name="search">搜一下</string>
    <string name="find">发现</string>
    <string name="waitexploe">待开发</string>
    <string name="alljiesuan">结算0</string>
    <string name="feelproduct">导购体验</string>
    <string name="deliver">待发货</string>
    <string name="refund">退款/售后</string>
    <string name="bingname">手机号码</string>
</resources>
