<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <ImageView

       android:id="@+id/imag_name"
       android:layout_marginLeft="8dp"
       android:layout_marginTop="8dp"
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:src="@drawable/yugang"/>
    <TextView
        android:layout_below="@+id/imag_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pictureneed"/>
    <LinearLayout
        android:layout_marginLeft="80dp"
        android:layout_alignTop="@+id/imag_name"
        android:layout_toRightOf="@+id/imag_name"
        android:layout_below="@+id/imag_name"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miszhang"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/professional"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workseniority"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/installproject"/>
    </LinearLayout>

</RelativeLayout>