<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordernumber"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waitpay"/>
</RelativeLayout>
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e7dfdf"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/allsale_iv"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/yugang"/>
    <TextView
         android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/allsale_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="55"/>
        <TextView
            android:id="@+id/allsale_tv"
            android:layout_alignBottom="@+id/allsale_iv"
            android:layout_toRightOf="@+id/allsale_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nowprice"/>
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_alignBottom="@+id/allsale_tv"
            android:id="@+id/allsale_tv1"
            android:layout_toRightOf="@+id/allsale_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previousprice"/>
        <TextView
            android:layout_marginRight="10dp"
            android:layout_alignBottom="@+id/allsale_iv"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="x1"/>
    </RelativeLayout>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productinformation"/>
    <View
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_toLeftOf="@+id/allsale_fukuan"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancleorder"/>
    <Button
        android:layout_marginRight="5dp"
        android:id="@+id/allsale_fukuan"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paymoney"
        android:background="#19cc75"/>
    </RelativeLayout>
</LinearLayout>