<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="50dp"
    android:layout_marginRight="20dp"
    android:background="#EEEEEE">
    <RelativeLayout
          android:layout_centerVertical="true"
          android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<Button
    android:background="#fff"
    android:textSize="16dp"
    android:textColor="#666"
    android:id="@+id/button1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/city"
    android:onClick="omclick"/>
        <Button
            android:layout_toRightOf="@+id/button1"
            android:layout_marginLeft="10dp"
            android:background="#fff"
            android:textSize="16dp"
            android:textColor="#666"
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wuxicity"
            android:onClick="omclick"
            android:layout_weight="1"/>
        <Button
            android:layout_toRightOf="@+id/button2"
            android:layout_marginLeft="10dp"
            android:background="#fff"
            android:layout_marginRight="10dp"
            android:textSize="16dp"
            android:textColor="#666"
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wuhancity"
            android:onClick="omclick"
            android:layout_weight="1"/>
        <Button
            android:layout_marginTop="10dp"
            android:layout_below="@+id/button1"
            android:textSize="16dp"
            android:textColor="#666"
            android:background="#fff"
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qingdaocity"
            android:onClick="omclick"
            android:layout_weight="1"/>
        <Button
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/button4"
            android:layout_below="@+id/button2"
            android:layout_marginLeft="10dp"
            android:background="#fff"
            android:layout_weight="1"
            android:textSize="16dp"
            android:textColor="#666"
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jinancity"
            android:onClick="omclick"/>
        <Button
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/button5"
            android:layout_below="@+id/button3"
            android:layout_marginLeft="10dp"
            android:background="#fff"
            android:layout_weight="1"
            android:textSize="16dp"
            android:textColor="#666"
            android:layout_marginRight="10dp"
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/othercity"
            android:onClick="omclick"/>

    </RelativeLayout>



</RelativeLayout>