<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="none"
    android:overScrollMode="never"
    tools:context="com.example.administrator.myyushi.zhuceActivity">
    <RelativeLayout
        android:id="@+id/rr"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="#222"
            android:id="@+id/login_biaoti1"
            android:layout_marginLeft="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetpassword"
            android:textSize="20dp"/>
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:id="@+id/login_left1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/yy_jt_left"/>
    </RelativeLayout>

    <View
        android:id="@+id/xian_view2"
        android:layout_below="@+id/rr"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#efebeb"/>
    <EditText
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:inputType="number"
        android:background="@null"
        android:id="@+id/login_zcnum1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shoujinumber"
        android:paddingLeft="20dp"
        android:paddingBottom="20dp"
        android:layout_below="@+id/xian_view2"/>
    <View
        android:layout_below="@+id/login_zcnum1"
        android:background="#e6e1e1"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <EditText
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:inputType="number"
        android:id="@+id/login_yanzheng1"
        android:layout_below="@+id/login_zcnum1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingBottom="20dp"
        android:hint="@string/shoujiyanzheng"
        android:background="@null"/>
    <View
        android:layout_below="@+id/login_yanzheng1"
        android:background="#e6e1e1"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:layout_marginRight="10dp"
        android:id="@+id/huoqu_tv"
        android:layout_below="@+id/login_zcnum1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/huoquyanzheng"
        android:textColor="#fbd23a"/>
    <EditText
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:singleLine="true"
        android:maxLength="12"
        android:background="@null"
        android:id="@+id/login_shuzi1"
        android:layout_below="@+id/login_yanzheng1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:hint="@string/chongfumima"
        android:inputType="textPassword"
        android:digits="@string/filter_vcode"/>
    <View
        android:layout_below="@+id/login_shuzi1"
        android:background="#e6e1e1"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <Button
        android:clickable="false"
        android:textColor="#fff"
        android:layout_centerVertical="true"
        android:id="@+id/login_zhuce2"
        android:background="#B4B4B4"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/login_shuzi1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>


</RelativeLayout>
