<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.myyushi.appointevaluteActivity"
   >
    <TextView
        android:textColor="#222"
        android:id="@+id/appointyuyue_sn"
        android:textSize="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_below="@+id/appointyuyue_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordernum"/>
    <ImageView
        android:id="@+id/appointyuyue_pic"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/appointyuyue_sn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/yugang"/>
    <TextView
        android:id="@+id/appointyuyue_tv"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/appointyuyue_pic"
        android:layout_below="@+id/appointyuyue_sn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"/>
    <EditText
        android:hint="@string/postevaluate"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:layout_below="@+id/appointyuyue_pic"
        android:id="@+id/appoint_edit"
        android:layout_width="match_parent"
        android:layout_height="100dp"
     />
    <Button
        android:layout_marginRight="10dp"
        android:textColor="#222"
        android:id="@+id/appointyuyue_post"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/appoint_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postmessage"
        android:background="#fbd23a"
        android:layout_marginBottom="10dp"
       />
</RelativeLayout>
