<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
 <RelativeLayout
     android:layout_marginTop="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
         android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/allsale"/>
     <TextView
         android:textColor="#222"
         android:layout_marginRight="10dp"
         android:id="@+id/zhi_qian"
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/price"/>
     <TextView
         android:textColor="#222"
         android:layout_toLeftOf="@+id/zhi_qian"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="¥"/>

 </RelativeLayout>
    <RelativeLayout
        android:id="@+id/sale_youhui"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/hot_product"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuxiaoyouhui"/>
        <ImageView
            android:visibility="invisible"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:id="@+id/right_iv"
            android:layout_toRightOf="@+id/sureyouhui_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/yy_jt_right"/>
        <TextView
            android:visibility="invisible"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:textColor="#222"
            android:layout_marginRight="10dp"
            android:id="@+id/sureyouhui_tv"
            android:layout_toRightOf="@+id/hot_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qingxuanze"/>
        <ImageView
            android:layout_marginRight="10dp"
            android:id="@+id/select_chose"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/turnoff"/>
    </RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:layout_marginLeft="10dp"
          android:id="@+id/zhifu_jifen"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/jifen"/>
     <TextView
         android:id="@+id/alljifen"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/zhifu_jifen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="共800积分，可低¥8.00"
         android:textSize="10dp"/>
        <ImageView
            android:layout_marginRight="10dp"
            android:id="@+id/select_iv"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/colse"
            android:clickable="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yunfei"/>
        <TextView
            android:textColor="#222"
            android:layout_marginRight="10dp"
            android:id="@+id/jiage1_tv"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           />
        <TextView
            android:textColor="#222"
            android:layout_toLeftOf="@+id/jiage1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¥"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shifupay"/>
        <TextView
            android:textColor="#222"
            android:layout_marginRight="10dp"
            android:id="@+id/shiji_tv1"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:textColor="#222"
            android:layout_toLeftOf="@+id/shiji_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¥"/>

    </RelativeLayout>

</LinearLayout>