<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.myyushi.SuggestActivity">
    <RelativeLayout
        android:background="#fbd23a"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/return_jianyi"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/yy_jt_left"/>
        <RelativeLayout
            android:id="@+id/advice"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
              android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="#222"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zixunfankui"
                android:textSize="20dp"/>
        </RelativeLayout>

    </RelativeLayout>

    <View

        android:layout_below="@+id/advice"
        android:background="#EEEEEE"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <EditText
        android:cursorVisible="false"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="8dp"
        android:id="@+id/advice_et"
        android:gravity="top"
        android:padding="10dp"
        android:hint="@string/suggest"
        android:background="@null"
        android:layout_below="@+id/xian_v1"
        android:layout_width="match_parent"
        android:layout_height="200dp" />
        <Button
            android:textColor="#222222"
            android:id="@+id/post"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:background="#fbd23a"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/postwenben"
            android:focusable="false"
            android:clickable="true"/>


</LinearLayout>
